--- a/portfolio.html
+++ b/portfolio.html
@@ -80,12 +80,20 @@
 
           <ul class="projects-list">
             <li class="projects-item">
-              <a class="projects-img" href=""
-                ><img
-                  src="images/img.jpg1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="projects-bottom">
                   <h2 class="projects-title">Banking App Interface Concept</h2>
                   <p class="projects-description">App</p>
@@ -94,11 +102,18 @@
             </li>
             <li class="projects-item">
               <a class="projects-img" href="">
-                <img
-                  src="images/img.jpg2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Cashless Payment</h2>
                   <p class="projects-description">Marketing</p>
@@ -106,12 +121,19 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="projects-img"  href="">
-                <img
-                  src="images/img.jpg3.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg3.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Meditaion App</h2>
                   <p class="projects-description">App</p>
@@ -120,8 +142,19 @@
             </li>
 
             <li class="projects-item">
-              <a class="projects-img"  href="">
-                <img src="images/img.jpg4.jpg" alt="Taxi Service" width="360" />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Taxi Service</h2>
                   <p class="projects-description">Marketing</p>
@@ -129,12 +162,19 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="projects-img"  href="">
-                <img
-                  src="images/img.jpg5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Screen Illustrations</h2>
                   <p class="projects-description">Design</p>
@@ -142,12 +182,19 @@
               </a>
             </li>
             <li class="projects-item">
-              <a class="projects-img"  href="">
-                <img
-                  src="images/img.jpg6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Online Courses</h2>
                   <p class="projects-description">Marketing</p>
@@ -156,12 +203,19 @@
             </li>
 
             <li class="projects-item">
-              <a class="projects-img"  href="">
-                <img
-                  src="images/img.jpg7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Instagram Stories Concept</h2>
                   <p class="projects-description">Design</p>
@@ -170,7 +224,18 @@
             </li>
             <li class="projects-item">
               <a class="projects-img" href="">
-                <img src="images/img.jpg8.jpg" alt="Organic Food" width="360" />
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.jpg8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Organic Food</h2>
                   <p class="projects-description">Web Site</p>
@@ -178,8 +243,19 @@
               </a>
             </li>
             <li class="projects-item">
-              <aclass="projects-img" href="">
-                <img src="images/img.png9.jpg" alt="Fresh Coffee" width="360" />
+              <a class="projects-img" href="">
+                <div class="projects-wraper">
+                  <img
+                    src="images/img.png9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="projects-bottom">
                   <h2 class="projects-title">Fresh Coffee</h2>
                   <p class="projects-description">Web Site</p>
