--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             Effective Solutions<br />
             for Your Business
           </h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -427,5 +429,16 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-clos" type="button" data-modal-close>
+          <svg class="modal-clos-icon" width="408" height="576">
+            <use href="./images/icons.svg#icon-Vector-1" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
