--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
 
       <section class="hero-wrapper">
         <div class="hero">
-          <h1 class="hero-title">
-            Effective Solutions<br />
-            for Your Business
-          </h1>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
